[gd_scene load_steps=9 format=3 uid="uid://ce30kjmfybl4w"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_4ued4"]
[ext_resource type="Texture2D" uid="uid://c08edf8ej561v" path="res://Assets/SpaceShipParts/Example/03.png" id="1_m1qp7"]
[ext_resource type="PackedScene" uid="uid://dn5muxd3wgkjs" path="res://Scenes/Weapons/basic_rocket.tscn" id="2_gt328"]
[ext_resource type="PackedScene" uid="uid://cjpy2e7uae78j" path="res://Scenes/Weapons/plasma_cannon.tscn" id="3_wa3fb"]
[ext_resource type="PackedScene" uid="uid://d3ck1273cuv4p" path="res://Scenes/Weapons/blue_laser.tscn" id="4_rv4k0"]
[ext_resource type="PackedScene" uid="uid://bxie0hafc4ffa" path="res://Scenes/Components/health_component.tscn" id="6_ha6u2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nhcac"]
size = Vector2(148, 71)

[sub_resource type="CircleShape2D" id="CircleShape2D_xbbpi"]
radius = 80.5308

[node name="Player" type="CharacterBody2D"]
position = Vector2(567, 353)
rotation = 1.5708
scale = Vector2(0.65, 0.65)
script = ExtResource("1_4ued4")
Rocket = ExtResource("2_gt328")
Cannon = ExtResource("3_wa3fb")
Basic_Lasers_Scene = ExtResource("4_rv4k0")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_m1qp7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -11.5)
shape = SubResource("RectangleShape2D_nhcac")

[node name="LaserContainer" type="Node" parent="."]

[node name="CannonContainer" type="Node" parent="."]

[node name="LeftMuzzle" type="Marker2D" parent="."]
position = Vector2(-37, -70)

[node name="RightMuzzle" type="Marker2D" parent="."]
position = Vector2(37, -70)

[node name="CannonMuzzle" type="Marker2D" parent="."]
position = Vector2(-0.333405, -85.9999)

[node name="PickUpArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpArea"]
shape = SubResource("CircleShape2D_xbbpi")

[node name="HealthComponent" parent="." instance=ExtResource("6_ha6u2")]
max_health = 5.0
